# ICprojects

./: .editorconfig  .gitignore  README.md
Guiao1/: relatorio.txt
Guiao1/sndfile-example-src/: CMakeLists.txt  hist.txt  wav_cmp.cpp  wav_effects.cpp  wav_quant.cpp
assignment-1/: README.md
assignment-1/BitStream/: BitStream.h  EncodDecod  EncodDecod.cpp  original.txt
assignment-1/audiocodec-src/: CMakeLists.txt  README.md  audiocodec.cpp  audiocodec.h  out.cod
assignment-1/audiocodec-src/bitstream-src/: CMakeLists.txt  README.md
assignment-1/bitstream-src/: Makefile  bitstream.h  encod_decod.cpp
assignment-1/plots/: README.md  generate_plot.py
assignment-1/report/: README.md
assignment-1/scripts/: README.md  ex2.sh  ex3.sh
assignment-1/sndfile-example-src/: README.md  wav_cmp.cpp  wav_dct.cpp  wav_effects.cpp  wav_effects.h  wav_hist.cpp  wav_hist.h  wav_quant.cpp
assignment-2/: README.md
assignment-2/bitstream/: bitstream.cpp  bitstream.hpp
assignment-2/golomb/: README.md  golomb.cpp  golomb.hpp
assignment-2/golomb-src/: README.md  golomb.cpp  golomb.hpp
assignment-2/imgmanipulation-src/: CMakeLists.txt  Makefile  README.md  img_cpy.cpp  img_eff.cpp
assignment-2/laudiocodec-src/: CMakeLists.txt  Makefile  README.md  bitstream.h  laudiocodec.cpp  laudiocodec.hpp
assignment-2/limagecodec-src/: CMakeLists.txt  Makefile  README.md  limagecodec.cpp  limagecodec.hpp  main.cpp
assignment-3/: .gitignore  CMakeLists.txt  FinishModel.txt  Makefile  README.md
assignment-3/models/: BulgarianModel.txt  FrenchModel.txt  ItalianModel.txt  OsLusiadas_model.txt  PortugueseModel.txt  SpanishModel.txt  englishExample.txt  example.txt  newLusiadas.txt
assignment-3/src/: fcm.cpp  fcm.h  findlang.cpp  lang.cpp
