CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

SET(ASSIGNMENT_3_PROJECT_NAME assignment-3)
SET(ASSIGNMENT_3_SOURCE_DIR src)

PROJECT(assignment-3)

SET (CMAKE_BUILD_TYPE "Release")
#SET (CMAKE_BUILD_TYPE "Debug")

SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++17 -pthread")
SET (CMAKE_CXX_FLAGS_RELEASE "-O3")
SET (CMAKE_CXX_FLAGS_DEBUG "-g3 -fsanitize=address")

SET (BASE_DIR ${CMAKE_SOURCE_DIR} )
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BASE_DIR}/bin)

ADD_EXECUTABLE(fcm src/fcm.cpp)
TARGET_LINK_LIBRARIES(fcm)

ADD_EXECUTABLE(lang src/lang.cpp)
TARGET_LINK_LIBRARIES(lang)

ADD_EXECUTABLE(findlang src/findlang.cpp)
TARGET_LINK_LIBRARIES(findlang)

ADD_EXECUTABLE(locatelang src/locatelang.cpp)
TARGET_LINK_LIBRARIES(locatelang)
